# sopa-solana

./: .gitignore  Anchor.toml  LICENSE  package-lock.json  package.json  readme.md
programs/kol-ifo/: Cargo.toml
programs/kol-ifo/src/: errors.rs  id.txt  lib.rs  seeds.rs  state.rs
programs/kol-ifo/src/instructions/: claim.rs  create_pool.rs  init.rs  mod.rs  withdraw.rs
programs/sopad-solana/: Cargo.toml
programs/sopad-solana/src/: errors.rs  id.txt  lib.rs  seeds.rs  state.rs
programs/sopad-solana/src/instructions/: claim.rs  create_pool.rs  deposit.rs  deposit_sol.rs  get_claim_amount.rs  get_offering_amount.rs  get_refunding_amount.rs  mod.rs  refund.rs  update_ifo.rs  update_pool.rs  withdraw.rs
tests/: 010_kol_init_ifo.ts  011_kol_create_pool.ts  012_kol_claim.ts  01_sopad-solana-init.ts  02_sopad-solana-create_pool.ts  03_sopad-solana-update_pool.ts  04_sopad-solana-deposit.ts  05_sopad-solana-claim.ts  06_sopad-solana-update_ifo.ts  07_sopad-solana-withdraw.ts  08_sopad_solana_refunds.ts
